commit al master del blogpost a la version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <h1>haciendo un blogpost</h1>
-    <p>este es blogpost de esta pagina web y es para todoss</p>
-    
+    <div id="container">
+       
+        <div id="post">
+            <h1>
+                este es el titulo atractivo he interesante post
+            </h1>
+            <p>
+                y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas
+            </p>
+        </div>
+
+    </div>
 </body>
 </html>
