--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="container">
-       
+        <div id="cabecera">
+            cabecera
+        </div>
         <div id="post">
             <h1>
                 este es el titulo atractivo he interesante post
